frontend/test/should_fail/from_storage_004b.grg
using from_storage;

rule s(ref m:map<EE,EE>)
{
	x:Node -e:E-> y:Node -f:EE{m[e]}-> y;
	
	modify {
	}
}
